appId: ${EWORK_APP_ID}
---
- assertVisible:
    text: ${EWORK_LOGIN_SCREEN_TEXT}
- tapOn:
    id: ${EWORK_COMPANY_ID_FIELD_ID}
- inputText: ${EWORK_COMPANY_CODE}
- tapOn:
    id: ${EWORK_USERNAME_FIELD_ID}
- inputText: ${EWORK_EMAIL}
- tapOn:
    id: ${EWORK_PASSWORD_FIELD_ID}
- inputText: ${EWORK_PASSWORD}
