appId: ${EWORK_APP_ID}
---
- launchApp
- tapOn:
    text: Always allow
    optional: true
- tapOn:
    text: Allow once
    optional: true
- assertVisible: ${EWORK_DASHBOARD_TEXT}
- runFlow: common/open_customer_list.yaml
- runFlow: common/go_to_customer_list_bottom.yaml
- assertVisible: New Customer List
